# LE

./: .env  .gitignore  Cargo.toml  README.md  another-recipient.json  deploy-keypair.json  new-deploy-keypair.json  package-lock.json  package.json  program-keypair.json  recipient-keypair.json  test-recipient.json  token-info.json  transaction-history.json  update_metadata.sh
assets/: clean_metadata.json  metadata.json
assets/images/: README.txt
docs/: deployment_guide.md  offline_deployment_steps.md  token_metadata_guide.md  upload-image-guide.md
scripts/: add_metadata.js  deploy_token.sh  deploy_with_metadata.js  distribute_token.sh  distribute_tokens.js  simple_deploy.js  update_metadata.js
src/: lib.rs  token_metadata.rs  token_program.rs
src/api/: main.rs  token_api.rs
temp_project/: README.md  package-lock.json  package.json  update_token_metadata.js  upload_image.js  upload_metadata.js
temp_upload/: clean_metadata.json
test-ledger/: faucet-keypair.json
