[package]
name = "le_token"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.16.0"
solana-sdk = "1.16.0"
spl-token = "4.0.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.40"
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.28.2", features = ["full"] }
qrcode = "0.12.0"
base64 = "0.21.2"
rand = "0.8.5"
dotenv = "0.15.0"

[lib]
name = "le_token"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "le_api"
path = "src/api/main.rs"